- Added background blob for Get Invovled section in the about page - Added hidden to overflow-x of html to fix mobile rendering issue

--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   overflow-x: hidden;
 }
 
@@ -131,4 +131,26 @@ body {
   .team-backgroundBlob {
     left: -280px;
   }
+}
+
+/* 
+ * --------------------------------------------------------
+ * getInvovled
+ * --------------------------------------------------------
+ * */
+
+.getInvolved-container {
+  position: relative;
+  padding-top: 112px;
+}
+
+.getInvolved-form-container, .getInvolved-links-container {
+  position: relative;
+  z-index: 100;
+}
+
+.getInvolved-backgroundBlob {
+  position: absolute;
+  top: 0;
+  left: -56px;
 }
